--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -48,7 +48,9 @@ $font-display: 'Josefin Sans', sans-serif;
 html{
     box-sizing: border-box;
     font-size: 62.5%;
-
+    @media only screen and (max-width: $bp-medium){
+        font-size: 50%;
+    }
 }
 
 body{
