--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -2,21 +2,21 @@
     position: fixed;
     top: 0;
     right: 0;
-    width: 100%;
+    width: 100vw;
     z-index: 10;
     &__items{
         background-color: var(--main-red);
         list-style: none;
         display: flex;
-        justify-content: flex-end;
         align-items: center;
+        justify-content: flex-end;
     }
     &__link{
         &:link,
         &:visited{
             text-decoration: none;
             display: block;
-            padding: 3rem 3rem;
+            padding: 2rem 3rem;
             font-size: 2rem;
             color: var(--main-white);
         }
