crwn-clothing added

--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -16,8 +16,8 @@
     padding: 15rem 5rem;
     overflow: hidden;
     &-grid{
-        @include flex-center;
-        flex-wrap: wrap;
+        display: grid;
+        grid-template-columns: repeat(6, 1fr);
         gap: 5rem;
         }
 }
