more media query added

--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -24,6 +24,17 @@
         display: grid;
         grid-template-columns: repeat(6, 1fr);
         gap: 5rem;
+        
+        @media only screen and (max-width: $bp-medium){
+            grid-template-columns: repeat(2, 1fr);
+        }
+
+        @media only screen and (max-width: $bp-small){
+            display: flex;
+            gap: 1.5rem;
+            flex-wrap: wrap;
+        }
+
         }
 
 }
