--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -4,6 +4,9 @@
         display: flex;
         gap: 3rem;
         margin-top: 5rem;
+        @media only screen and (max-width: $bp-small){
+            flex-direction: column;
+        }
     }
     &-link{
         transition: all .3s;
