--- a/sass/_project.scss
+++ b/sass/_project.scss
@@ -6,9 +6,16 @@
     overflow: hidden;
     transition: all .3s;
     grid-column: span 2;
+
+    @media only screen and (max-width: $bp-medium){
+        grid-column: span 1;
+    }
+
     &-image{
         max-width: 100%;
         height: auto;
+
+        
     }
     &-title{
         color: var(--main-white);
@@ -26,9 +33,16 @@
         transform: translateY(-8px);
     
     }
+
+
     
 }
 
 .main-project {
     grid-column: span 3;
+
+    @media only screen and (max-width: $bp-medium){
+        grid-column: span 1;
+    }
 }
+
