--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -51,6 +51,10 @@ html{
     @media only screen and (max-width: $bp-medium){
         font-size: 50%;
     }
+
+    @media only screen and (max-width: $bp-small){
+        font-size: 43.75%;
+    }
 }
 
 body{
