--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -10,6 +10,12 @@
         display: flex;
         align-items: center;
         justify-content: flex-end;
+
+        @media only screen and (max-width: $bp-small){
+            flex-direction: column;
+            width: 30vw;
+            position: relative;
+        }
     }
     &__link{
         &:link,
